# Rust-ine

./: .gitignore  .prettierrc  .windsurfrules  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json
.claude/: settings.json
.claude/hooks/: check-pairing.sh  clippy.sh  guard-main.sh
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: color_ops.rs  favicon_ops.rs  gif_ops.rs  image_ops.rs  lib.rs  main.rs  metadata_ops.rs  pdf_builder_ops.rs  pdf_ops.rs  pdf_split_ops.rs  pdf_watermark_ops.rs  progress.rs  qr_ops.rs  rename_ops.rs  sprite_ops.rs  svg_ops.rs  utils.rs
src/components/: AnimationTab.tsx  Base64Tab.tsx  BulkRenameTab.tsx  CompressTab.tsx  ConvertTab.tsx  CropTab.tsx  DropZone.tsx  ExifStripTab.tsx  FaviconTab.tsx  FileList.tsx  GlobalProgressBar.tsx  HistoryModal.tsx  ImageGrid.tsx  ImageGridCard.tsx  ImagesToPdfTab.tsx  MetadataPanel.tsx  OnboardingModal.tsx  OptimizeTab.tsx  PaletteTab.tsx  PdfBuilderTab.tsx  PdfCompressTab.tsx  PdfPageCard.tsx  PdfPageGrid.tsx  PdfProtectTab.tsx  PdfSplitTab.tsx  PdfTab.tsx  PdfToImagesTab.tsx  PdfWorkbenchTab.tsx  ProgressBar.tsx  QrCodeTab.tsx  ResizeTab.tsx  ResultsBanner.tsx  SettingsPanel.tsx  SplashScreen.tsx  SpriteSheetTab.tsx  SvgRasterizeTab.tsx  TitleBar.tsx  UpdateBanner.tsx  WatermarkTab.tsx
src/hooks/: HistoryProvider.tsx  useAutoUpdate.ts  useFileSelection.ts  useGlobalShortcuts.ts  useHistory.ts  useOutputDir.ts  usePdfBuilder.ts  (+6 more)
(+9 files in other folders)
