[package]
name = "rustine"
version = "1.0.0"
description = "Rust-ine - Desktop image compression & PDF extraction tool"
authors = ["Léon Gallet"]
edition = "2021"

[lib]
name = "rustine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25.9"
imageproc = "0.25"
ab_glyph = "0.2"
rayon = "1.11.0"
lopdf = "0.39.0"
pdfium-render = { version = "0.8", default-features = false, features = ["image_025", "pdfium_latest", "thread_safe"] }
webp = "0.3.1"
tokio = { version = "1.49.0", features = ["full"] }
kamadak-exif = "0.5"
base64 = "0.22"
oxipng = "9"
zip = { version = "2", default-features = false, features = ["deflate"] }
gif = "0.13"
tauri-plugin-updater = "2"
